Add comparison of using a fixed frequency resolution based on 1 hour FFT and cropping to different duration

--- a/Step1a_Generate_RAS_fixed_resolution.ipynb
+++ b/Step1a_Generate_RAS_fixed_resolution.ipynb
@@ -59,6 +59,7 @@
     "                                                                                ds_spec['Duration'],\n",
     "                                                                                0.5,\n",
     "                                                                                ds_spec['this_seed'],\n",
+    "                                                                                kwargs=dict(fft_equiv_duration=60*60),\n",
     "                                                                                input_core_dims=[[],[],[],[],[],[]],\n",
     "                                                                                output_core_dims=[[],[],[],[],[],[]],\n",
     "                                                                                vectorize=True,\n",
@@ -78,7 +79,7 @@
     "# Use multiple processes to calculate timeseries\n",
     "with dask.config.set(scheduler='processes'):\n",
     "    with ProgressBar():\n",
-    "        ds_spec_chunked.to_zarr('RAS_n10000_2Hz.zarr',mode='w')"
+    "        ds_spec_chunked.to_zarr('RAS_n10000_2Hz_fixedres.zarr',mode='w')"
    ]
   },
   {
@@ -94,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_spec = xr.open_zarr('RAS_n10000_2Hz.zarr').load()\n",
+    "ds_spec = xr.open_zarr('RAS_n10000_2Hz_fixedres.zarr').load()\n",
     "ds_spec = ds_spec.rename({'Duration':'duration','Gamma':'gamma','Tp':'tp','Seed':'seed'})\n",
     "ds_spec = ds_spec.assign_coords({'duration':ds_spec['duration'],'gamma':ds_spec['gamma'],'tp':ds_spec['tp'],'seed':range(len(ds_spec['seed']))})\n",
     "ds_spec['HmHs'] = ds_spec['Hmax']/ds_spec['Hs']\n",
@@ -126,7 +127,7 @@
     "    layout.append(ds_mean[v].hvplot.image(groupby=['duration'],cmap='viridis',aspect=1,title=v))\n",
     "layout = hv.Layout(layout).cols(3)\n",
     "\n",
-    "hv.save(layout,filename=\"RAS_Mean.html\")"
+    "hv.save(layout,filename=\"RAS_Mean_fixedres.html\")"
    ]
   },
   {
@@ -140,7 +141,7 @@
     "    layout.append(ds_CV[v].hvplot.image(groupby=['duration'],cmap='viridis',aspect=1,title=v))\n",
     "layout = hv.Layout(layout).cols(3)\n",
     "\n",
-    "hv.save(layout,filename=\"RAS_CV.html\")"
+    "hv.save(layout,filename=\"RAS_CV_fixedres.html\")"
    ]
   },
   {
@@ -154,7 +155,7 @@
     "    layout.append(ds_max[v].hvplot.image(groupby=['duration'],cmap='viridis',aspect=1,title=v))\n",
     "layout = hv.Layout(layout).cols(3)\n",
     "\n",
-    "hv.save(layout,filename=\"RAS_Max.html\")"
+    "hv.save(layout,filename=\"RAS_Max_fixedres.html\")"
    ]
   },
   {
@@ -197,6 +198,13 @@
     "\n",
     "da_ts.hvplot(x='time')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
