--- a/Step2a_Generate_DAS_fixed_resolution.ipynb
+++ b/Step2a_Generate_DAS_fixed_resolution.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from linearsim import time_domain_ras"
+    "from linearsim import time_domain_das"
    ]
   },
   {
@@ -52,13 +52,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_spec['Tz'], ds_spec['Hs'], ds_spec['Hmax'], ds_spec['H13'], ds_spec['r'], _ = xr.apply_ufunc(time_domain_ras,\n",
+    "ds_spec['Tz'], ds_spec['Hs'], ds_spec['Hmax'], ds_spec['H13'], ds_spec['r'], _ = xr.apply_ufunc(time_domain_das,\n",
     "                                                                                ds_spec['Tp'],\n",
     "                                                                                1.0,\n",
     "                                                                                ds_spec['Gamma'],\n",
     "                                                                                ds_spec['Duration'],\n",
     "                                                                                0.5,\n",
     "                                                                                ds_spec['this_seed'],\n",
+    "                                                                                kwargs=dict(fft_equiv_duration=60*60),\n",
     "                                                                                input_core_dims=[[],[],[],[],[],[]],\n",
     "                                                                                output_core_dims=[[],[],[],[],[],[]],\n",
     "                                                                                vectorize=True,\n",
@@ -78,7 +79,7 @@
     "# Use multiple processes to calculate timeseries\n",
     "with dask.config.set(scheduler='processes'):\n",
     "    with ProgressBar():\n",
-    "        ds_spec_chunked.to_zarr('RAS_n10000_2Hz.zarr',mode='w')"
+    "        ds_spec_chunked.to_zarr('DAS_n10000_2Hz_fixedres.zarr',mode='w')"
    ]
   },
   {
@@ -94,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_spec = xr.open_zarr('RAS_n10000_2Hz.zarr').load()\n",
+    "ds_spec = xr.open_zarr('DAS_n10000_2Hz_fixedres.zarr').load()\n",
     "ds_spec = ds_spec.rename({'Duration':'duration','Gamma':'gamma','Tp':'tp','Seed':'seed'})\n",
     "ds_spec = ds_spec.assign_coords({'duration':ds_spec['duration'],'gamma':ds_spec['gamma'],'tp':ds_spec['tp'],'seed':range(len(ds_spec['seed']))})\n",
     "ds_spec['HmHs'] = ds_spec['Hmax']/ds_spec['Hs']\n",
@@ -126,7 +127,7 @@
     "    layout.append(ds_mean[v].hvplot.image(groupby=['duration'],cmap='viridis',aspect=1,title=v))\n",
     "layout = hv.Layout(layout).cols(3)\n",
     "\n",
-    "hv.save(layout,filename=\"RAS_Mean.html\")"
+    "hv.save(layout,filename=\"DAS_Mean_fixedres.html\")"
    ]
   },
   {
@@ -140,7 +141,7 @@
     "    layout.append(ds_CV[v].hvplot.image(groupby=['duration'],cmap='viridis',aspect=1,title=v))\n",
     "layout = hv.Layout(layout).cols(3)\n",
     "\n",
-    "hv.save(layout,filename=\"RAS_CV.html\")"
+    "hv.save(layout,filename=\"DAS_CV_fixedres.html\")"
    ]
   },
   {
@@ -154,7 +155,7 @@
     "    layout.append(ds_max[v].hvplot.image(groupby=['duration'],cmap='viridis',aspect=1,title=v))\n",
     "layout = hv.Layout(layout).cols(3)\n",
     "\n",
-    "hv.save(layout,filename=\"RAS_Max.html\")"
+    "hv.save(layout,filename=\"DAS_Max_fixedres.html\")"
    ]
   },
   {
@@ -188,7 +189,7 @@
     "tp, duration, gamma,_ = np.array(largest_wave.sample.values.item())\n",
     "seed = int(largest_wave.this_seed)\n",
     "dt=0.5\n",
-    "ts=time_domain_ras(tp,1.0,gamma,duration,dt=dt,seed=seed,return_ts=True)\n",
+    "ts=time_domain_das(tp,1.0,gamma,duration,dt=dt,seed=seed,return_ts=True)\n",
     "da_ts = xr.DataArray(ts,dims='time',coords={'time':np.arange(0,duration,dt)},name='timeseries')\n",
     "\n",
     "# Double check that that the time series is generates correctly\n",
@@ -197,6 +198,13 @@
     "\n",
     "da_ts.hvplot(x='time')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
