--- a/Step1_Generate_RAS.ipynb
+++ b/Step1_Generate_RAS.ipynb
@@ -78,7 +78,7 @@
     "# Use multiple processes to calculate timeseries\n",
     "with dask.config.set(scheduler='processes'):\n",
     "    with ProgressBar():\n",
-    "        ds_spec_chunked.to_zarr('RAS_n10000_2Hz.zarr',mode='w')"
+    "        ds_spec_chunked.to_zarr('data/timeseries_stats/RAS_n10000_2Hz.zarr',mode='w')"
    ]
   },
   {
@@ -126,7 +126,7 @@
     "    layout.append(ds_mean[v].hvplot.image(groupby=['duration'],cmap='viridis',aspect=1,title=v))\n",
     "layout = hv.Layout(layout).cols(3)\n",
     "\n",
-    "hv.save(layout,filename=\"RAS_Mean.html\")"
+    "hv.save(layout,filename=\"figures/timeseries_stats/RAS_Mean.html\")"
    ]
   },
   {
@@ -140,7 +140,7 @@
     "    layout.append(ds_CV[v].hvplot.image(groupby=['duration'],cmap='viridis',aspect=1,title=v))\n",
     "layout = hv.Layout(layout).cols(3)\n",
     "\n",
-    "hv.save(layout,filename=\"RAS_CV.html\")"
+    "hv.save(layout,filename=\"figures/timeseries_stats/RAS_CV.html\")"
    ]
   },
   {
@@ -154,7 +154,7 @@
     "    layout.append(ds_max[v].hvplot.image(groupby=['duration'],cmap='viridis',aspect=1,title=v))\n",
     "layout = hv.Layout(layout).cols(3)\n",
     "\n",
-    "hv.save(layout,filename=\"RAS_Max.html\")"
+    "hv.save(layout,filename=\"figures/timeseries_stats/RAS_Max.html\")"
    ]
   },
   {
