--- a/Step1a_Generate_RAS_fixed_resolution.ipynb
+++ b/Step1a_Generate_RAS_fixed_resolution.ipynb
@@ -79,7 +79,7 @@
     "# Use multiple processes to calculate timeseries\n",
     "with dask.config.set(scheduler='processes'):\n",
     "    with ProgressBar():\n",
-    "        ds_spec_chunked.to_zarr('RAS_n10000_2Hz_fixedres.zarr',mode='w')"
+    "        ds_spec_chunked.to_zarr('data/timeseries_stats/RAS_n10000_2Hz_fixedres.zarr',mode='w')"
    ]
   },
   {
@@ -127,7 +127,7 @@
     "    layout.append(ds_mean[v].hvplot.image(groupby=['duration'],cmap='viridis',aspect=1,title=v))\n",
     "layout = hv.Layout(layout).cols(3)\n",
     "\n",
-    "hv.save(layout,filename=\"RAS_Mean_fixedres.html\")"
+    "hv.save(layout,filename=\"figures/timeseries_stats/RAS_Mean_fixedres.html\")"
    ]
   },
   {
@@ -141,7 +141,7 @@
     "    layout.append(ds_CV[v].hvplot.image(groupby=['duration'],cmap='viridis',aspect=1,title=v))\n",
     "layout = hv.Layout(layout).cols(3)\n",
     "\n",
-    "hv.save(layout,filename=\"RAS_CV_fixedres.html\")"
+    "hv.save(layout,filename=\"figures/timeseries_stats/RAS_CV_fixedres.html\")"
    ]
   },
   {
@@ -155,7 +155,7 @@
     "    layout.append(ds_max[v].hvplot.image(groupby=['duration'],cmap='viridis',aspect=1,title=v))\n",
     "layout = hv.Layout(layout).cols(3)\n",
     "\n",
-    "hv.save(layout,filename=\"RAS_Max_fixedres.html\")"
+    "hv.save(layout,filename=\"figures/timeseries_stats/RAS_Max_fixedres.html\")"
    ]
   },
   {
