Major revisions: - added model fit functions and results - tidied notebooks made examples faster - regenerated figures

--- a/Step2_Generate_DAS.ipynb
+++ b/Step2_Generate_DAS.ipynb
@@ -36,13 +36,24 @@
    "outputs": [],
    "source": [
     "ds_spec = xr.Dataset()\n",
-    "ds_spec['Gamma'] = xr.DataArray(da.arange(1,7,0.5),dims='gamma')\n",
-    "ds_spec['Tp'] = xr.DataArray(da.arange(8,20.5,0.5),dims='tp')\n",
+    "ds_spec['Gamma'] = xr.DataArray([3.3],dims='gamma')\n",
+    "ds_spec['Tp'] = xr.DataArray([12.],dims='tp')\n",
     "ds_spec['Duration'] = xr.DataArray(da.array([2,5,10,20,40,60])*60,dims='duration')\n",
-    "n_seed = 10000\n",
-    "ds_spec['Seed'] = xr.DataArray(da.arange(n_seed,chunks=(500,)).astype('int'),dims='seed')\n",
+    "n_seed = 1000\n",
+    "ds_spec['Seed'] = xr.DataArray(da.arange(n_seed,chunks=(200,)).astype('int'),dims='seed')\n",
     "ds_spec['this_seed'] = xr.DataArray(da.random.choice(int(1E9), size=(len(ds_spec['Tp']), len(ds_spec['Gamma']), len(ds_spec['Duration']), n_seed)).astype('int'), dims=('tp','gamma','duration','seed'))\n",
-    "ds_spec = ds_spec.chunk({'tp':1,'gamma':-1,'duration':1,'seed':2000})\n",
+    "ds_spec = ds_spec.chunk({'tp':1,'gamma':-1,'duration':1,'seed':200})\n",
+    "ds_spec['hs'] = 1.0\n",
+    "ds_spec['dt'] = 0.5\n",
+    "\n",
+    "def set_coords(ds):\n",
+    "    ds = ds.rename({'Duration':'duration','Gamma':'gamma','Seed':'seed','Tp':'tp'})\n",
+    "    ds = ds.assign_coords({'duration':ds['duration'],'gamma':ds['gamma'],'seed':range(len(ds['seed'])),'tp':ds['tp']})\n",
+    "    ds = ds.set_coords(['hs','tp','dt'])\n",
+    "    return ds\n",
+    "\n",
+    "ds_spec = set_coords(ds_spec)\n",
+    "\n",
     "ds_spec"
    ]
   },
@@ -52,19 +63,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_spec['Tz'], ds_spec['Hs'], ds_spec['Hmax'], ds_spec['H13'], ds_spec['r'], _ = xr.apply_ufunc(time_domain_das,\n",
-    "                                                                                ds_spec['Tp'],\n",
-    "                                                                                1.0,\n",
-    "                                                                                ds_spec['Gamma'],\n",
-    "                                                                                ds_spec['Duration'],\n",
-    "                                                                                0.5,\n",
-    "                                                                                ds_spec['this_seed'],\n",
-    "                                                                                input_core_dims=[[],[],[],[],[],[]],\n",
-    "                                                                                output_core_dims=[[],[],[],[],[],[]],\n",
-    "                                                                                vectorize=True,\n",
-    "                                                                                dask='parallelized',\n",
-    "                                                                                output_dtypes=['float','float','float','float','float','int']\n",
-    "                                                                                )"
+    "# Names of output variables returned from time_domain_ras function\n",
+    "output_variables = 'Tz, Tm01, Hm0, Hs, H13, H13_unbiased, Hmax, HmaxT, Cmax, CmaxT2, r_spectra, r_sample, r_unbiased, k3, k4, seed'\n",
+    "outputs = xr.apply_ufunc(time_domain_das,\n",
+    "                        ds_spec['tp'],\n",
+    "                        ds_spec['hs'],\n",
+    "                        ds_spec['gamma'],\n",
+    "                        ds_spec['duration'],\n",
+    "                        ds_spec['dt'],\n",
+    "                        ds_spec['this_seed'],\n",
+    "                        input_core_dims=[[],[],[],[],[],[]],\n",
+    "                        output_core_dims=[[],]*16,\n",
+    "                        vectorize=True,\n",
+    "                        dask='parallelized',\n",
+    "                        output_dtypes=['float',]*16\n",
+    "                        )\n",
+    "                        \n",
+    "# Assign the outputs to the xr.Dataset\n",
+    "for v, o in zip(output_variables.split(',')[:-1],outputs[:-1]): # ignore the returned seed - same as input\n",
+    "    ds_spec[v.strip()] = o\n",
+    "ds_spec"
    ]
   },
   {
@@ -73,12 +91,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_spec_chunked = ds_spec.chunk({'tp':1,'gamma':-1,'duration':1,'seed':-1})\n",
-    "\n",
     "# Use multiple processes to calculate timeseries\n",
     "with dask.config.set(scheduler='processes'):\n",
     "    with ProgressBar():\n",
-    "        ds_spec_chunked.to_zarr('data/timeseries_stats/DAS_n10000_2Hz.zarr',mode='w')"
+    "        ds_spec = ds_spec.compute()\n",
+    "ds_spec.to_netcdf(f'data/timeseries_stats/DAS_n{n_seed}_2Hz.nc',mode='w')"
    ]
   },
   {
@@ -94,9 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_spec = xr.open_zarr('DAS_n10000_2Hz.zarr').load()\n",
-    "ds_spec = ds_spec.rename({'Duration':'duration','Gamma':'gamma','Tp':'tp','Seed':'seed'})\n",
-    "ds_spec = ds_spec.assign_coords({'duration':ds_spec['duration'],'gamma':ds_spec['gamma'],'tp':ds_spec['tp'],'seed':range(len(ds_spec['seed']))})\n",
+    "ds_spec = xr.open_dataset(f'data/timeseries_stats/DAS_n{n_seed}_2Hz.nc')\n",
     "ds_spec['HmHs'] = ds_spec['Hmax']/ds_spec['Hs']\n",
     "ds_std = ds_spec.std(dim='seed')\n",
     "ds_mean = ds_spec.mean(dim='seed')\n",
@@ -123,7 +138,7 @@
    "source": [
     "layout = []\n",
     "for v in ds_mean.data_vars:\n",
-    "    layout.append(ds_mean[v].hvplot.image(groupby=['duration'],cmap='viridis',aspect=1,title=v))\n",
+    "    layout.append(ds_mean[v].hvplot(x='duration',cmap='viridis',aspect=1,title=v))\n",
     "layout = hv.Layout(layout).cols(3)\n",
     "\n",
     "hv.save(layout,filename=\"figures/timeseries_stats/DAS_Mean.html\")"
@@ -137,7 +152,7 @@
    "source": [
     "layout = []\n",
     "for v in ds_CV.data_vars:\n",
-    "    layout.append(ds_CV[v].hvplot.image(groupby=['duration'],cmap='viridis',aspect=1,title=v))\n",
+    "    layout.append(ds_CV[v].hvplot(x='duration',cmap='viridis',aspect=1,title=v))\n",
     "layout = hv.Layout(layout).cols(3)\n",
     "\n",
     "hv.save(layout,filename=\"figures/timeseries_stats/DAS_CV.html\")"
@@ -151,7 +166,7 @@
    "source": [
     "layout = []\n",
     "for v in ds_max.data_vars:\n",
-    "    layout.append(ds_max[v].hvplot.image(groupby=['duration'],cmap='viridis',aspect=1,title=v))\n",
+    "    layout.append(ds_max[v].hvplot(x='duration',cmap='viridis',aspect=1,title=v))\n",
     "layout = hv.Layout(layout).cols(3)\n",
     "\n",
     "hv.save(layout,filename=\"figures/timeseries_stats/DAS_Max.html\")"
@@ -187,8 +202,9 @@
     "\n",
     "tp, duration, gamma,_ = np.array(largest_wave.sample.values.item())\n",
     "seed = int(largest_wave.this_seed)\n",
-    "dt=0.5\n",
-    "ts=time_domain_das(tp,1.0,gamma,duration,dt=dt,seed=seed,return_ts=True)\n",
+    "dt=float(ds_stacked['dt'])\n",
+    "hs=float(ds_stacked['hs'])\n",
+    "ts=time_domain_das(tp,hs,gamma,duration,dt=dt,seed=seed,return_ts=True)\n",
     "da_ts = xr.DataArray(ts,dims='time',coords={'time':np.arange(0,duration,dt)},name='timeseries')\n",
     "\n",
     "# Double check that that the time series is generates correctly\n",
@@ -197,13 +213,6 @@
     "\n",
     "da_ts.hvplot(x='time')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
