Fix notebook rendering

--- a/Step7_ModelDistributionDemo.ipynb
+++ b/Step7_ModelDistributionDemo.ipynb
@@ -11,7 +11,8 @@
     "import matplotlib.pyplot as plt\n",
     "import yaml\n",
     "\n",
-    "from distfit import get_distribution #This function takes a dataset of fit coefficents and returns a scipy statistical distribution"
+    "from distfit import get_distribution #This function takes a dataset of fit coefficents and returns a scipy statistical distribution\n",
+    "xr.set_options(display_style='text')"
    ]
   },
   {
