Fix notebook rendering

--- a/Step6_EvaluateModel.ipynb
+++ b/Step6_EvaluateModel.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<xarray.core.options.set_options at 0x1dac33ca2b0>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import xarray as xr\n",
     "import numpy as np\n",
@@ -34,12 +23,12 @@
     "\n",
     "from linearsim import jonswap, freqs, spectra_stats\n",
     "from distfit import get_distribution #This function takes a dataset of fit coefficents and returns a scipy statistical distribution\n",
-    "xr.set_options(display_style='text')"
+    "# xr.set_options(display_style='text')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,70 +50,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre>&lt;xarray.Dataset&gt;\n",
-       "Dimensions:             (coeff: 3, variable: 5, parameter: 3, term: 2)\n",
-       "Coordinates:\n",
-       "  * coeff               (coeff) &lt;U9 &#x27;gamma^2&#x27; &#x27;gamma&#x27; &#x27;Intercept&#x27;\n",
-       "    distribution        (variable) &lt;U10 &#x27;genextreme&#x27; ... &#x27;genextreme&#x27;\n",
-       "  * parameter           (parameter) &lt;U5 &#x27;loc&#x27; &#x27;scale&#x27; &#x27;shape&#x27;\n",
-       "  * term                (term) &lt;U5 &#x27;const&#x27; &#x27;x1&#x27;\n",
-       "  * variable            (variable) &lt;U8 &#x27;HmHs&#x27; &#x27;Hmax&#x27; &#x27;Hs&#x27; &#x27;Tz&#x27; &#x27;r_sample&#x27;\n",
-       "Data variables: (12/24)\n",
-       "    0.025               (variable, parameter, term, coeff) float64 0.001109 ....\n",
-       "    0.975               (variable, parameter, term, coeff) float64 0.001511 ....\n",
-       "    AIC                 (variable, parameter, term) float64 -159.5 ... -99.33\n",
-       "    Adj. R-squared      (variable, parameter, term) float64 0.998 ... 0.575\n",
-       "    BIC                 (variable, parameter, term) float64 -157.2 ... -97.01\n",
-       "    Coef.               (variable, parameter, term, coeff) float64 0.00131 .....\n",
-       "    ...                  ...\n",
-       "    Std.Err.            (variable, parameter, term, coeff) float64 9.303e-05 ...\n",
-       "    equation            (variable, parameter) &lt;U49 &#x27;$loc$ = x1.$(\\\\logN)^{0.6...\n",
-       "    t                   (variable, parameter, term, coeff) float64 14.08 ... ...\n",
-       "    xpow                (variable, parameter) float64 0.6667 1.0 0.5 ... 1.0 1.0\n",
-       "    xtran               (variable, parameter) &lt;U4 &#x27;log&#x27; &#x27;noop&#x27; ... &#x27;log&#x27; &#x27;log&#x27;\n",
-       "    ytran               (variable, parameter) &lt;U4 &#x27;noop&#x27; &#x27;noop&#x27; ... &#x27;log&#x27; &#x27;log&#x27;</pre>"
-      ],
-      "text/plain": [
-       "<xarray.Dataset>\n",
-       "Dimensions:             (coeff: 3, variable: 5, parameter: 3, term: 2)\n",
-       "Coordinates:\n",
-       "  * coeff               (coeff) <U9 'gamma^2' 'gamma' 'Intercept'\n",
-       "    distribution        (variable) <U10 'genextreme' ... 'genextreme'\n",
-       "  * parameter           (parameter) <U5 'loc' 'scale' 'shape'\n",
-       "  * term                (term) <U5 'const' 'x1'\n",
-       "  * variable            (variable) <U8 'HmHs' 'Hmax' 'Hs' 'Tz' 'r_sample'\n",
-       "Data variables: (12/24)\n",
-       "    0.025               (variable, parameter, term, coeff) float64 0.001109 ....\n",
-       "    0.975               (variable, parameter, term, coeff) float64 0.001511 ....\n",
-       "    AIC                 (variable, parameter, term) float64 -159.5 ... -99.33\n",
-       "    Adj. R-squared      (variable, parameter, term) float64 0.998 ... 0.575\n",
-       "    BIC                 (variable, parameter, term) float64 -157.2 ... -97.01\n",
-       "    Coef.               (variable, parameter, term, coeff) float64 0.00131 .....\n",
-       "    ...                  ...\n",
-       "    Std.Err.            (variable, parameter, term, coeff) float64 9.303e-05 ...\n",
-       "    equation            (variable, parameter) <U49 '$loc$ = x1.$(\\\\logN)^{0.6...\n",
-       "    t                   (variable, parameter, term, coeff) float64 14.08 ... ...\n",
-       "    xpow                (variable, parameter) float64 0.6667 1.0 0.5 ... 1.0 1.0\n",
-       "    xtran               (variable, parameter) <U4 'log' 'noop' ... 'log' 'log'\n",
-       "    ytran               (variable, parameter) <U4 'noop' 'noop' ... 'log' 'log'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "suffix='_model_221112'\n",
     "n_seed=25000\n",
     "with open(f'data/model/Model_Coefficients{suffix}.yaml',mode='rt') as f:\n",
     "    ds_model=xr.Dataset.from_dict(yaml.safe_load(f))\n",
-    "display(ds_model)"
+    "# display(ds_model)"
    ]
   },
   {
